# voting

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
tests/: test_votes.csv  test_voting.py
voting/: __init__.py
