#
# Build system requirements
#
[build-system]

requires = ["setuptools"]
build-backend = "setuptools.build_meta"

#
# Basic project metadata
#
[project]

name = "voting"

version = "v0.0.1"

description = "Count votes in the RFI Post Doc Association Election"

readme = "README.md"

requires-python = ">=3.6"

license = {file = "LICENSE"}

keywords = [
  "approval voting",
  "proportional representation",
]

authors = [
  {name = "James Parkhurst", email = "james.parkhurst@rfi.ac.uk" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "matplotlib",
  "numpy",
  "numpy",
  "pandas",
  "scipy",
  "tabulate",
]

#
# Project urls
#
[project.urls]

"Source" = "https://github.com/rosalindfranklininstitute/voting"
"Tracker" = "https://github.com/rosalindfranklininstitute/voting/issues"

#
# Project additional optional dependencies
#
[project.optional-dependencies]

test = [
  "pytest",
]

#
# Configure setup tools
#
[tool.setuptools.packages.find]

where = ["."]

#
# Project command line scripts
#
[project.scripts]

"voting.count_votes" = "voting:main"

#
# Configure pytest
#
[tool.pytest.ini_options]

testpaths = [ "tests" ]
